conteudo do site

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 
+<head>
+
+    <meta charset="utf-8">
+<title> página inicial </title>
+
+
+</head>
+
 <html>
+<body>
+<hl>FOFOCAS.BR</hl>
+nesse site iremos apresentar fofocas entre alguns famosos ou celebridades.
 
-
-
-
-
-
-
-
-
- </html>
+</body>
+  </html>
 
