--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+  <link rel="stylesheet" href="style.css">
 
     <meta charset="utf-8">
 <title> página inicial </title>
@@ -11,13 +12,13 @@
 <html>
 <body>
 <hl>FOFOCAS.BR</hl>
+
 nesse site iremos apresentar fofocas entre alguns famosos ou celebridades.
 
 Apesar de estar namorando com a modelo Daiane de Paula, Caio Castro relembrou da época de 
 solteiro para comentar sobre o tema.
-
 Caio Castro usou as redes sociais para se pronunciar após uma fala polêmica sobre
- pagar conta em date viralizar. O ator rebateu as críticas que recebeu sobre a declaração e 
+pagar conta em date viralizar. O ator rebateu as críticas que recebeu sobre a declaração e 
 afirmou não ter sido bem compreendido.
 
 "Não conseguir compreender uma fala demonstra a presença de um erro; compreendê-la, mas
@@ -27,5 +28,8 @@ afirmou não ter sido bem compreendido.
 
 
 </body>
-  </html>
+
+
+
+   </html>
 
