--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
 <body>
 <hl>FOFOCAS.BR</hl>
 
-nesse site iremos apresentar fofocas entre alguns famosos ou celebridades.
+<p>nesse site iremos apresentar fofocas entre alguns famosos ou celebridades.</p>
 
-Apesar de estar namorando com a modelo Daiane de Paula, Caio Castro relembrou da época de 
+<p>Apesar de estar namorando com a modelo Daiane de Paula, Caio Castro relembrou da época de 
 solteiro para comentar sobre o tema.
 Caio Castro usou as redes sociais para se pronunciar após uma fala polêmica sobre
-pagar conta em date viralizar. O ator rebateu as críticas que recebeu sobre a declaração e 
-afirmou não ter sido bem compreendido.
+pagar conta em date viralizar. O ator rebateu as críticas que recebeu sobre a declaração</p>
 
-"Não conseguir compreender uma fala demonstra a presença de um erro; compreendê-la, mas
+<p>"Não conseguir compreender uma fala demonstra a presença de um erro; compreendê-la, mas
  deturpá-la, demonstra ausência de honestidade. Pagar jantar não é sustentar uma pessoa,
-  mas dizer que afirmei tal coisa é sustentar uma mentira", disse em publicação no Instagram.
+  mas dizer que afirmei tal coisa é sustentar uma mentira", disse em publicação no Instagram.</p>
 
 
 
