--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <html>
 <body>
 <hl>FOFOCAS.BR</hl>
+ 
+<img ID="imagem" src="caiocastro.webp">
 
 <p>nesse site iremos apresentar fofocas entre alguns famosos ou celebridades.</p>
 
