--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 
 <head>
   <link rel="stylesheet" href="style.css">
-
-    <meta charset="utf-8">
-<title> página inicial </title>
-
-
+  
+  title> página inicial </title>
+ <meta charset="utf-8">
 </head>
 
 <html>
-<body>
+ <body>
 <hl>FOFOCAS.BR</hl>
  
-<img ID="imagem" src="caiocastro.webp">
+<img ID="imagem" src="caiocastro.webp"      height="200px" width="200px">
 
 <p>nesse site iremos apresentar fofocas entre alguns famosos ou celebridades.</p>
 
@@ -26,6 +24,13 @@ pagar conta em date viralizar. O ator rebateu as críticas que recebeu sobre a d
  deturpá-la, demonstra ausência de honestidade. Pagar jantar não é sustentar uma pessoa,
   mas dizer que afirmei tal coisa é sustentar uma mentira", disse em publicação no Instagram.</p>
 
+<ul>
+  <li>Maria Eduarda Migon</li>
+  <li>Ana Heloisa Boing Lemes</li>
+  <li>Bndre Braun</li>
+  <li>Sabrina Rafaela</li>
+  <li>willian renan</li>
+</ul>
 
 
 </body>
