--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <link rel="stylesheet" href="style.css">
   
-  title> Caio Castro </title>
+</title> Caio Castro </title>
  <meta charset="utf-8">
 </head>
 
 <html>
  <body>
-<hl>FOFOCAS.BR</hl>
+  <hl>FOFOCAS.BR</hl>
  
 <img ID="imagem" src="caiocastro.webp"      height="400px" width="400px">
 
@@ -24,13 +24,13 @@ pagar conta em date viralizar. O ator rebateu as críticas que recebeu sobre a d
  deturpá-la, demonstra ausência de honestidade. Pagar jantar não é sustentar uma pessoa,
   mas dizer que afirmei tal coisa é sustentar uma mentira", disse em publicação no Instagram.</p>
 
-</ul>
+</ol>
   <li>Maria Eduarda Migon</li>
   <li>Ana Heloisa Boing Lemes</li>
   <li>Bndre Braun</li>
   <li>Sabrina Rafaela</li>
   <li>Caio Castro</li>
-</ul>
+</ol>
 
 
 </body>
