--- a/index.html
+++ b/index.html
@@ -1,44 +1,74 @@
 <!DOCTYPE html>
 
-<head>
-  <hl>FOFOCAS.BR</hl>
-
-  <link rel="stylesheet" href="style.css">
-
-</title> Caio Castro </title>
- <meta charset="utf-8">
-</head>
-
 <html>
- <body>
-<header> FOFOCAS.BR </header>
- 
- 
-<img ID="imagem" src="caiocastro.webp"      height="400px" width="400px">
+<head>
 
-<p>nesse site iremos apresentar fofocas entre alguns famosos ou celebridades.</p>
+    <link rel="stylesheet" href="style.css">
+    <meta charset = "utf-8">
 
-<p>Apesar de estar namorando com a modelo Daiane de Paula, Caio Castro relembrou da época de 
-solteiro para comentar sobre o tema.
-Caio Castro usou as redes sociais para se pronunciar após uma fala polêmica sobre
-pagar conta em date viralizar. O ator rebateu as críticas que recebeu sobre a declaração</p>
+<title>pagina html</title>
 
-<p>"Não conseguir compreender uma fala demonstra a presença de um erro; compreendê-la, mas
- deturpá-la, demonstra ausência de honestidade. Pagar jantar não é sustentar uma pessoa,
-  mas dizer que afirmei tal coisa é sustentar uma mentira", disse em publicação no Instagram.</p>
+</head>
+<bory>
+    <header>
 
-</ol>
-  <li>Maria Eduarda Migon</li>
-  <li>Ana Heloisa Boing Lemes</li>
-  <li>Bndre Braun</li>
-  <li>Sabrina Rafaela</li>
-  <li>Caio Castro</li>
-</ol>
+    <ul class="menu1" >
+        <li><a href="index.html">HOME </a></li>
+        <li><a  href="pagina1.html">AVALIÇÃO DOS JOGOS</li></a>
+        <li><a href="sugestao.html">SUGESTÃO DE JOGOS PARA VOCÊ</a></li>
+        <li><a href= "sobre.html">SOBRE NÓS</a></li>
+        <li><a href="contato.html">CONTATO</a></li>
+      </ul>
+
+      </header>
 
 
-</body>
+    <h1>Avaliação de jogos</h1>
+   <h2>Free Fire</h2> 
+   <img ID="imagem1"  src="fire.jpg"  width="100%" height="100px">
+
+    <p>O jogo do Free Fire, criado por......  é um jogo online e de aplicativo de 
+        celular</p>
+
+    <p>Atinge o público na maioria de jovens e adolescentes, entre 10 à 23 anos, e foi um 
+    dos jogos mais populares de todos tempos.</p>
+
+
+   <p> Pessoas jogam esse jogo de forma individual, em duplas ou elas podem formar esquadrões de até 4 
+    pessoas.</p>
+
+    <p>O Free Fire surgiu em dezembro de 2017, desenvolvido por um estúdio vietnamita 
+    chamado 111dots Studio. Não demorou para o direito de publicação do jogo ser 
+    adquirido pela Garena, que é comandada pelo bilionário Forrest Li. Embora não 
+    exista um nome específico para a posição de "criador de Free Fire", foi o
+     executivo quem viu o potencial de investir no gênero e no game.</p>
+
+    <p>O estúdio vietnamita trabalhou somente no battle royale, e até hoje faz parte 
+do desenvolvimento do game, além de ser a sede do servidor do Vietnã. Assim, Free
+ Fire Battlegrounds, como era chamado anteriormente, se tornou Garena Free Fire.</p>
+
+    <p>A ideia com o jogo era de trazer a mesma experiência de PlayerUnknown’s 
+Battlegrounds (ou PUBG) para os celulares. Como o "pai" do gênero battle 
+royale exigia configurações mais potentes no computador e no mobile, a 
+experiência não podia ser aproveitada tranquilamente por jogadores com 
+plataformas mais simples. Free Fire chegou para ser mais acessível.</p>
+
+<p>O beta do game foi lançado em novembro de 2017, com lançamento acontecendo 
+em dezembro. Free Fire, carinhosamente apelidado de FRIFAS pelos brasileiros, 
+se tornou um dos jogos mais baixados de 2018, sendo muito popular no Brasil e na Ásia.</p>
+
+<ul>
+    <li>Nilo César Reichembach</li>
+    <li>Felipe Bagio</li>
+    <li>Eduardo Galvão</li>
+    <li>Ana Formaio</li>
+    <li>Letícia Berviufonbviuorebnh</li>
+</ul>
+
+
+</bory>
 
 
 
-   </html>
 
+</html>
